assets/css/style.css
/* colors
#69c172 green
#f3ebce white
#0073bc blue
*/


/* general styles */

.container{
    display: grid;
}

/* header styles */
.header {
    position: relative;
    background-image: url(assets/images/SAFEGUARD-hero-image.webp);
    background-size: cover;
    height: 600px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.header h1 {
    position: absolute;
    top: 20px;
    width: 100%;
    text-align: center;
    color: white;
    font-size: 3rem;
    margin: 0;
}

.header p {
    margin-top: 300px;
}

/* navbar styles */

.icon{
    max-height: 40px;
    position: absolute;
    top: 8px;
    left: 1%;
}

/* inline scroller styles */
.card-scroller{
    display: grid;
    /* gap: 1rem; */
    padding: 2px 0;
    max-width: 100%;
    grid-auto-flow: column;
    grid-auto-columns: 92%;
    overflow-x: auto;
    overscroll-behavior-inline: contain;
}

.snaps-inline{
    scroll-snap-type: inline mandatory;
    scroll-padding-inline: 1rem;
}

.snaps-inline > *{
    scroll-snap-align: start;
}

.card{
    display: grid;
    gap: 0.7rem;
    padding: 1rem;
    background-color: aquamarine;
    border-radius: 10px;
    margin-left: 20px;
}

.card > img{
    max-width: 100%;
    object-fit: cover;
}

/* footer styles */
.footer{
    background-color: #f3ebce;
    bottom: 0;
    width: 100%;
    height: 80px;
    margin-top: 20px;
}

/* media queries for adaptive layout */
/* medium size screens */
@media screen and (min-width: 769px){
    /* navbar styles */
    .icon{
        left: 4%;
    }
    
    div, .navbar-nav{
        top: 6px;
    }

    a, .nav-link{
        margin-left: 3%;
    }

    div, .dropdown{
        top: 0px;
    }

    /* inline scroller styles */
    .card-scroller{
        display: grid;
        grid-auto-flow: column;
        grid-auto-columns: 45%;
    }
}

/* large screens */
@media screen and (min-width: 1280px){
    main{
        padding: 60px 20% 0 20%;
    }

    /* navbar styles */
    .icon{
        left: 20%;
    }

    /* inline scroller styles */
    .card-scroller{
        display: grid;
        grid-auto-flow: column;
        grid-auto-columns: 23%;
    }
}

